==> RT-Thread/rt-thread/bsp/nxp/mcx/mcxn/libraries/drivers/drv_eth.c <==
#include <rtthread.h>
#include <rtdevice.h>
#include <finsh.h>
#include "fsl_enet.h"
#include <netif/ethernetif.h>
#include "lwipopts.h"
#define DBG_TAG "drv.eth"
#define DBG_LVL DBG_INFO
#include <rtdbg.h>
#define PHY_ID1_REG                 0x02U
#define PHY_ID2_REG                 0x03U
#define PHY_AUTONEG_ADVERTISE_REG   0x04U
#define PHY_BASIC_CONTROL_REG       0x00U
#define PHY_RESET_MASK              (1<<15)
#define PHY_AUTO_NEGOTIATION_MASK   (1<<12)
#define PHY_LINK         (1 << 0)
#define PHY_100M         (1 << 1)
#define PHY_FULL_DUPLEX  (1 << 2)
#define PHY_BASIC_STATUS_REG        0x01U
#define PHY_LINKED_STATUS_MASK      (1<<2)
#define PHY_AUTONEGO_COMPLETE_MASK  (1<<5)
#define PHY_Status_REG              0x1FU
#define PHY_100M_MASK               (1<<3)
#define PHY_FULL_DUPLEX_MASK        (1<<4)
#define PHY_Status_SPEED_100M(sr)   ((sr) & PHY_100M_MASK)
#define PHY_Status_FULL_DUPLEX(sr)  ((sr) & PHY_FULL_DUPLEX_MASK)
#define EXAMPLE_ENET_BASE    ENET0
#define EXAMPLE_PHY_ADDRESS  0x00U
#define ENET_EXAMPLE_IRQ     ETHERNET_IRQn
#define EXAMPLE_CLOCK_FREQ   (50000000U)
#define ENET_RXBD_NUM               (4)
#define ENET_TXBD_NUM               (4)
#define ENET_RXBUFF_SIZE            (ENET_FRAME_MAX_FRAMELEN)
#define ENET_BuffSizeAlign(n)       ENET_ALIGN(n, ENET_BUFF_ALIGNMENT)
#define ENET_ALIGN(x, align)        ((unsigned int)((x) + ((align)-1)) & (unsigned int)(~(unsigned int)((align)-1)))
#define MAX_ADDR_LEN 6

static rt_err_t rt_stm32_eth_init(rt_device_t dev)
{
    uint32_t count = 0;
    bool link      = false;
    bool autonego  = false;
    status_t status;
    enet_config_t config;
    int i;
    uint32_t rxbuffer[ENET_RXBD_NUM];

    struct rt_stm32_eth *eth = (struct rt_stm32_eth*)dev->user_data;

    for (i = 0; i < ENET_RXBD_NUM; i++)
    {
        /* This is for rx buffers, static alloc and dynamic alloc both ok. use as your wish. */
        rxbuffer[i] = (uint32_t)rt_malloc(ENET_RXBUFF_SIZE);
    }

    /* prepare the buffer configuration. */
    enet_buffer_config_t buffConfig[1] = {{
        ENET_RXBD_NUM,
        ENET_TXBD_NUM,
        &g_txBuffDescrip[0],
        &g_txBuffDescrip[0],
        &g_txDirty[0],
        &g_rxBuffDescrip[0],
        &g_rxBuffDescrip[ENET_RXBD_NUM],
        &rxbuffer[0],
        ENET_BuffSizeAlign(ENET_RXBUFF_SIZE),
    }};


    CLOCK_AttachClk(kNONE_to_ENETRMII);
    CLOCK_EnableClock(kCLOCK_Enet);

    ENET_SetSMI(EXAMPLE_ENET_BASE, CLOCK_GetCoreSysClkFreq());
    ENET_GetDefaultConfig(&config);

    /* Use the actual speed and duplex when phy success to finish the autonegotiation. */
    config.miiSpeed  = kENET_MiiSpeed100M;
    config.miiDuplex = kENET_MiiFullDuplex;
    config.interrupt = (kENET_DmaRx) | (kENET_DmaTx);

    ENET_Init(EXAMPLE_ENET_BASE, &config, &stm32_eth_device.dev_addr[0], EXAMPLE_CLOCK_FREQ);
    ENET_DescriptorInit(EXAMPLE_ENET_BASE, &config, &buffConfig[0]);
    ENET_CreateHandler(EXAMPLE_ENET_BASE, &eth->g_handle, &config, &buffConfig[0], ENET_IntCallback, NULL);
    ENET_StartRxTx(EXAMPLE_ENET_BASE, 1, 1);

    return RT_EOK;
}

rt_err_t rt_stm32_eth_tx(rt_device_t dev, struct pbuf *p)
{
    struct pbuf *q;
    status_t status;

    struct rt_stm32_eth *eth = (struct rt_stm32_eth*)dev->user_data;
  //  LOG_D("rt_stm32_eth_tx: len: %d, tot_len:%d", p->len, p->tot_len);

    enet_buffer_struct_t txBuff[ENET_TXBD_NUM];
    enet_tx_frame_struct_t txFrame = {0};

    for (q = p; q != NULL; q = q->next)
    {
        txBuff[txFrame.txBuffNum].buffer = q->payload;
        txBuff[txFrame.txBuffNum].length = q->len;
        txFrame.txBuffNum++;
    }

    txFrame.txBuffArray        = txBuff;
    txFrame.txConfig.intEnable = true;
    txFrame.txConfig.tsEnable  = true;
    txFrame.context            = RT_NULL;


    status = ENET_SendFrame(EXAMPLE_ENET_BASE, &eth->g_handle, &txFrame, 0);

    return (status == kStatus_Success);
}

struct pbuf *rt_stm32_eth_rx(rt_device_t dev)
{
    struct pbuf *p = RT_NULL;
    uint32_t len = 0;
    status_t status;

    struct rt_stm32_eth *eth = (struct rt_stm32_eth*)dev->user_data;

    status = ENET_GetRxFrameSize(EXAMPLE_ENET_BASE, &eth->g_handle, &len, eth->rx_channel);

   // LOG_D("rt_stm32_eth_rx: status:%d, length: %d, channel:%d", status, len, eth->rx_channel);

    if (len != 0 && (status == kStatus_Success))
    {
        /* Received valid frame. Deliver the rx buffer with the size equal to length. */
        p = pbuf_alloc(PBUF_RAW, len, PBUF_POOL);
        if (p != NULL)
        {
            status = ENET_ReadFrame(EXAMPLE_ENET_BASE, &eth->g_handle, p->payload, len, eth->rx_channel, NULL);

            if (status == kStatus_Success)
            {
                return p;
            }
            else
            {
                LOG_D(" A frame read failed\n");
                pbuf_free(p);
            }
        }
        else
        {
            LOG_D(" pbuf_alloc faild\n");
        }
    }
    else if (status == kStatus_ENET_RxFrameError)
    {
        /* update the receive buffer. */
        ENET_ReadFrame(EXAMPLE_ENET_BASE, &eth->g_handle, NULL, 0, eth->rx_channel, NULL);
    }
    return RT_NULL;
}

static void phy_monitor_thread_entry(void *parameter)
{
    uint8_t phy_addr = 0xFF;
    uint8_t detected_count = 0;

    while(phy_addr == 0xFF)
    {
        /* phy search */
        rt_uint16_t i, temp;
        for (i = 0; i <= 0x1F; i++)
        {
           // EthHandle.Init.PhyAddress = i;
            ENET_MDIORead(EXAMPLE_ENET_BASE, i, PHY_ID1_REG, &temp);

            if (temp != 0xFFFF && temp != 0x00)
            {
                phy_addr = i;
                break;
            }
        }

        detected_count++;
        rt_thread_mdelay(1000);

        if (detected_count > 10)
        {
            LOG_E("No PHY device was detected, please check hardware!");
        }
    }

    LOG_D("Found a phy, address:0x%02X", phy_addr);

    /* RESET PHY */
    LOG_D("RESET PHY!");
    ENET_MDIOWrite(EXAMPLE_ENET_BASE, phy_addr, PHY_BASIC_CONTROL_REG, PHY_RESET_MASK);
    rt_thread_mdelay(2000);
    ENET_MDIOWrite(EXAMPLE_ENET_BASE, phy_addr, PHY_BASIC_CONTROL_REG, PHY_AUTO_NEGOTIATION_MASK);

    while(1)
    {
        static rt_uint8_t phy_speed = 0;
        uint8_t phy_speed_new = 0;
        uint16_t status;

        ENET_MDIORead(EXAMPLE_ENET_BASE, phy_addr, PHY_BASIC_STATUS_REG, &status);
        LOG_D("phy basic status reg is 0x%X", status);

        if (status & (PHY_AUTONEGO_COMPLETE_MASK | PHY_LINKED_STATUS_MASK))
        {
            uint16_t SR = 0;

            phy_speed_new |= PHY_LINK;

            ENET_MDIORead(EXAMPLE_ENET_BASE, phy_addr, PHY_Status_REG, &SR);
            LOG_D("phy control status reg is 0x%X", SR);

            if (PHY_Status_SPEED_100M(SR))
            {
                phy_speed_new |= PHY_100M;
            }

            if (PHY_Status_FULL_DUPLEX(SR))
            {
                phy_speed_new |= PHY_FULL_DUPLEX;
            }
        }

        if (phy_speed != phy_speed_new)
        {
            phy_speed = phy_speed_new;
            if (phy_speed & PHY_LINK)
            {
                LOG_D("link up");
                if (phy_speed & PHY_100M)
                {
                    LOG_D("100Mbps");
                }
                else
                {
                    LOG_D("10Mbps");
                }

                if (phy_speed & PHY_FULL_DUPLEX)
                {
                    LOG_D("full-duplex");
                }
                else
                {
                    LOG_D("half-duplex");
                }

                /* send link up. */
                eth_device_linkchange(&stm32_eth_device.parent, RT_TRUE);
            }
            else
            {
                LOG_I("link down");
                eth_device_linkchange(&stm32_eth_device.parent, RT_FALSE);
            }
        }
        rt_thread_mdelay(1000);
    }
}
